--- a/Ats/src/ats/TeacherAttendanceView.fxml
+++ b/Ats/src/ats/TeacherAttendanceView.fxml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1"
+            fx:controller="ats.TeacherAttendanceView" prefHeight="400.0" prefWidth="600.0">
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.TeacherAttendanceViewController">
     <children>
-        <Pane prefHeight="400.0" prefWidth="600.0">
-            <Button fx:id="tec_View_Attendance" layoutX="352.0" layoutY="165.0" onAction="#tec_View_Attendance_Btn" text="View Attendance" />
-            <DatePicker fx:id="attendanceDatePicker" layoutX="319.0" layoutY="88.0" />
-            <ComboBox fx:id="sectionComboBox" layoutX="318.0" layoutY="125.0" prefHeight="25.0" prefWidth="174.0" />
-            <TableView fx:id="attendanceTable" layoutX="3.0">
+        <Pane prefWidth="600.0" prefHeight="400.0">
+            <DatePicker fx:id="attendanceDatePicker" layoutX="320.0" layoutY="60.0" />
+            <ComboBox fx:id="sectionComboBox" layoutX="320.0" layoutY="100.0" prefWidth="170.0" />
+            <Button fx:id="tec_View_Attendance" layoutX="320.0" layoutY="140.0"
+                    text="View Attendance" onAction="#tec_View_Attendance_Btn"/>
+            <TableView fx:id="attendanceTable" layoutX="20.0" layoutY="180.0" prefWidth="560.0" prefHeight="200.0">
                 <columns>
-                    <TableColumn fx:id="studentIdCol" text="Student ID" />
-                    <TableColumn fx:id="studentNameCol" text="Name" />
-                    <TableColumn fx:id="statusCol" text="Present?" />
+                    <TableColumn fx:id="studentIdCol" text="Student ID" prefWidth="150"/>
+                    <TableColumn fx:id="studentNameCol" text="Student Name" prefWidth="200"/>
+                    <TableColumn fx:id="statusCol" text="Present?" prefWidth="100"/>
                 </columns>
             </TableView>
-
         </Pane>
     </children>
 </AnchorPane>
